--- a/Portfolio.css
+++ b/Portfolio.css
@@ -212,8 +212,9 @@ p {
 	background-position: top center;
 	position: relative;
 	z-index: 1;
-}
-#hero::after {
+  }
+  
+  #hero::after {
 	content: '';
 	position: absolute;
 	left: 0;
@@ -223,33 +224,65 @@ p {
 	background-color: black;
 	opacity: 0.7;
 	z-index: -1;
-}
-#hero .hero {
+  }
+  
+  #hero .hero {
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 0 50px;
-	justify-content: flex-start;
-}
-#hero h1 {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+  }
+  
+  #hero .hero-text {
+	flex: 1;
+  }
+  
+  #hero .hero-image {
+	flex: 0 0 300px;
+	width: 300px;
+	height: 300px;
+	border-radius: 50%;
+	overflow: hidden;
+	border: 5px solid white;
+  }
+  
+  #hero .hero-image img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+  }
+  
+  #hero h1 {
 	display: block;
 	width: fit-content;
-	font-size: 4rem;
+	font-size: 3rem;
 	position: relative;
 	color: transparent;
 	animation: text_reveal 0.5s ease forwards;
 	animation-delay: 1s;
-}
-#hero h1:nth-child(1) {
+  }
+  
+  #hero h1:nth-child(1) {
 	animation-delay: 1s;
-}
-#hero h1:nth-child(2) {
-	animation-delay: 2s;
-}
-#hero h1:nth-child(3) {
+  }
+  
+  #hero h1:nth-child(2) {
 	animation: text_reveal_name 0.5s ease forwards;
+	animation-delay: 2s;
+  }
+  
+  #hero h1:nth-child(3) {
 	animation-delay: 3s;
-}
-#hero h1 span {
+  }
+  
+  #hero h1:nth-child(4) {
+	animation: text_reveal_name 0.5s ease forwards;
+	animation-delay: 4s;
+  }
+  
+  #hero h1 span {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -258,18 +291,25 @@ p {
 	background-color: crimson;
 	animation: text_reveal_box 1s ease;
 	animation-delay: 0.5s;
-}
-#hero h1:nth-child(1) span {
+  }
+  
+  #hero h1:nth-child(1) span {
 	animation-delay: 0.5s;
-}
-#hero h1:nth-child(2) span {
+  }
+  
+  #hero h1:nth-child(2) span {
 	animation-delay: 1.5s;
-}
-#hero h1:nth-child(3) span {
+  }
+  
+  #hero h1:nth-child(3) span {
 	animation-delay: 2.5s;
-}
-
-/* End Hero Section */
+  }
+  
+  #hero h1:nth-child(4) span {
+	animation-delay: 3.5s;
+  }
+  
+  /* End Hero Section */
 
 /* Certifications Section */
 #Certifications .Certifications {
@@ -277,7 +317,7 @@ p {
 	text-align: center;
 	max-width: 1500px;
 	margin: 0 auto;
-	padding: 100px 0;
+	padding: 50px 0;
 }
 #Certifications .Certification-top {
 	max-width: 500px;
@@ -340,13 +380,14 @@ p {
 #projects .projects {
 	flex-direction: column;
 	max-width: 1200px;
-	margin: 0 auto;
-	padding: 100px 0;
+	margin: 50px auto;
+	padding: 50px 0;
 }
 #projects .projects-header h1 {
 	margin-bottom: 50px;
 }
 #projects .all-projects {
+	padding: 30px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -357,7 +398,7 @@ p {
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	width: 80%;
+	width: 100%;
 	margin: 20px auto;
 	overflow: hidden;
 	border-radius: 10px;
@@ -409,30 +450,41 @@ p {
 	transform: scale(1.1);
 }
 /* End Projects section */
-/* skills */
+/* Skills */
 #skills .skill-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	max-width: 800px;
 	margin: 50px auto;
+	padding: 50px 0;
 	text-align: center;
   }
   
   #skills h2 {
-	font-size: 2rem;
+	font-size: 4rem;
+	font-weight: 500;
   }
   
-  .skills-container {
-	display: flex;
-	justify-content: space-between;
-	margin-top: 20px;
+  .subheading {
+	font-size: 2rem;
+	font-weight: 300;
+	margin: 20px 0 10px;
+  }
+  
+  .skills-grid {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-gap: 20px;
+	margin-bottom: 20px;
+  }
+  .skills-grid.centered-row {
+	grid-template-columns: repeat(4, 1fr);
+	justify-content: center;
   }
   
   .skill {
-	flex: 0 0 30%; /* Adjust the width of each skill frame */
 	text-align: center;
-	position: relative;
 	cursor: pointer;
   }
   
@@ -464,31 +516,22 @@ p {
 	}
   }
   
-  /* GIF container styles */
-  .gif-container {
-	width: 10%;
-	text-align: left;
-	margin-top: -902px;
-	margin-left: 500px;
-  }
+ 
   
-  .gif-container img {
-	max-width: 10%;
-	height: auto;
-  }
-  #about {
-	margin-top: 800px; /* Adjust the value based on your design */
-  }
-/* skills */
+ 
+  /* Skills */
 
 /* About Section */
-#about .about {
-	flex-direction: column-reverse;
+#about .about.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	text-align: center;
 	max-width: 1200px;
-	margin: 0 auto;
-	padding: 100px 20px;
+	margin: 50px auto;
+	padding: 50px 0;
 }
+
 #about .resume {
 	display: inline-block;
 	padding: 10px 20px;
@@ -499,52 +542,81 @@ p {
 	animation: neonGlow 1.5s ease-in-out infinite;
 	border-radius: 5px;
 	font-weight: bold;
-  }
-#about .col-left {
-	width: 250px;
-	height: 360px;
+	margin-top: 20px;
 }
+
 #about .col-right {
 	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
-#about .col-right h2 {
-	font-size: 1.8rem;
+
+/* #about .col-right h1 {
+	font-size: 4rem;
 	font-weight: 500;
-	letter-spacing: 0.2rem;
+	margin-bottom: 20px;
+} */
+
+#about .info-boxes {
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
+	margin-bottom: 30px;
+}
+
+#about .info-box {
+	width: 45%;
+	padding: 20px;
+	background-color: #f5f5f5;
+	border-radius: 15px;
+	text-align: center;
+	box-sizing: border-box;
+}
+
+#about .info-box .info-icon {
+	display: block;
+	margin: 0 auto;
+	width: 30px;
+	height: 30px;
 	margin-bottom: 10px;
 }
+
+#about .info-box h2 {
+	font-size: 3rem;
+	text-align: center;
+	margin-bottom: 5px;
+}
+
+#about .info-box h3 {
+	font-size: 1.5rem;
+	text-align: left;
+	/* margin-bottom: 5px; */
+}
+
+
+
 #about .col-right p {
 	margin-bottom: 20px;
+	text-align: justify;
+	padding: 30px;
 }
+
 #about .col-right .cta {
 	color: black;
 	margin-bottom: 50px;
 	padding: 10px 20px;
 	font-size: 2rem;
 }
-#about .col-left .about-img {
-	height: 100%;
-	width: 100%;
-	position: relative;
-	border: 10px solid white;
-}
-#about .col-left .about-img::after {
-	content: '';
-	position: absolute;
-	left: -33px;
-	top: 19px;
-	height: 98%;
-	width: 98%;
-	border: 7px solid crimson;
-	z-index: -1;
-}
-/* End About Section */
 
+
+/* End About Section */
 /* contact Section */
-#contact .contact {
+#contact .contact{
 	flex-direction: column;
 	max-width: 1200px;
-	margin: 0 auto;
+	margin: 50px auto;
+	padding: 50px 0;
 	width: 90%;
 }
 #contact .contact-items {
@@ -574,7 +646,7 @@ p {
 	margin-bottom: 10px;
 }
 #contact .contact-info h1 {
-	font-size: 2.5rem;
+	font-size: 3rem;
 	font-weight: 500;
 	margin-bottom: 5px;
 }
@@ -713,31 +785,55 @@ p {
 		height: 100%;
 	}
 	/* End Project */
+/* about me */
+#about .col-right h1 {
+	font-size: 2.5rem;
+}
 
-	/* About */
-	#about .about {
-		flex-direction: row;
-	}
-	#about .col-left {
-		width: 600px;
-		height: 400px;
-		padding-left: 60px;
-	}
-	#about .about .col-left .about-img::after {
-		left: -45px;
-		top: 34px;
-		height: 98%;
-		width: 98%;
-		border: 10px solid crimson;
-	}
-	#about .col-right {
-		text-align: left;
-		padding: 30px;
-	}
-	#about .col-right h1 {
-		text-align: left;
-	}
-	/* End About */
+#about .info-boxes {
+	flex-direction: column;
+	align-items: center;
+}
+
+#about .info-box {
+	width: 80%;
+	margin-bottom: 20px;
+}
+
+#about .info-box h2 {
+	font-size: 2rem;
+}
+
+#about .info-box h3 {
+	font-size: 1.2rem;
+}
+
+#about .info-box p {
+	font-size: 1.2rem;
+}
+
+#about .resume {
+	font-size: 1.2rem;
+	padding: 8px 16px;
+}
+
+#about .col-right .cta {
+	font-size: 1.5rem;
+}
+
+#about .about.container {
+	padding: 20px 0;
+	margin: 20px auto;
+}
+
+#about .col-right p {
+	font-size: 1.2rem;
+	text-align: left;
+	margin-left: 20px;
+		margin-right: 20px;
+}
+/* end about me */
+
 
 	/* contact  */
 	#contact .contact {
@@ -774,10 +870,15 @@ p {
 	/* End contact  */
 }
 @media (max-width: 767px) {
-	.gif-container {
-	  width: 50%; /* Full width for mobile view */
-	  margin-left: 150px; /* Reset margin-left for mobile view */
-	}
+	
+	#hero .hero-image {
+		flex: 0 0 200px;
+		width: 200px;
+		height: 200px;
+		border-radius: 50%;
+		overflow: hidden;
+		border: 5px solid white;
+	  }
   }
 /* End Media Query For Tablet */
 
@@ -809,11 +910,18 @@ p {
 		flex-basis: 22%;
 		margin: 1.5%;
 	}
-}
-@media (min-width: 768px) {
-	.gif-container {
-	  width: 50%; /* Adjust the width for desktop view */
-	  margin-left: 500px; /* Adjust the margin-left value for desktop view */
+	/* about me */
+	#about .info-boxes {
+		flex-direction: row;
 	}
-  }
+	#about .info-box {
+		width: 45%;
+	}
+	#about .info-box p {
+		font-size: 1.5rem;
+		/* margin-bottom: 5px; */
+	}
+	/* end about me */
+}
+
 /* End  Media Query For Desktop */
